# LensDB

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  lensdb.cabal  lensdb.yaml
app/: Main.hs
bench/: Bench.hs  ProfessionalBench.hs
docker/: entrypoint.sh  lensdb.yaml
docs/: API.md
examples/: README.md  python_client_example.py
src/LensDB/: API.hs  Client.hs  Config.hs  Core.hs  Logging.hs  Network.hs  Persistence.hs  Protocol.hs  Storage.hs
systemd/: install.sh  lensdb.service  lensdb@.service
test/: Spec.hs
test/LensDB/: ConfigSpec.hs  CoreSpec.hs  PersistenceSpec.hs  ProtocolSpec.hs  StorageSpec.hs
