cabal-version: 3.0
name:          lensdb
version:       0.1.0.0
synopsis:      A resident NoSQL key-value database system
description:   LensDB is a high-performance, resident NoSQL database system that operates
               on key-value data structures through bytes. It can be used for databases,
               caches, message brokers, and other data storage needs.
category:      Database
homepage:      https://github.com/C0dWiz/lensdb
bug-reports:   https://github.com/C0dWiz/lensdb/issues
author:        C0dWiz
maintainer:    c0dwiz@example.com
copyright:     2026 C0dWiz
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple
extra-source-files:
    README.md
    CHANGELOG.md
    LICENSE

source-repository head
  type:     git
  location: https://github.com/C0dWiz/lensdb.git

library
  exposed-modules:
      LensDB.Core
    , LensDB.Storage
    , LensDB.Network
    , LensDB.Protocol
    , LensDB.Config
    , LensDB.Logging
    , LensDB.Persistence
    , LensDB.Client
    , LensDB.API
  other-modules:
      Paths_lensdb
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , bytestring >=0.10 && <0.13
    , containers >=0.6 && <0.8
    , network >=3.1 && <3.2
    , network-simple >=0.4 && <0.5
    , binary >=0.8 && <0.9
    , directory >=1.3 && <1.4
    , filepath >=1.4 && <1.5
    , time >=1.5 && <2
    , async >=2.2 && <2.3
    , stm >=2.5 && <2.6
    , mtl >=2.2 && <2.4
    , transformers >=0.5 && <0.7
    , aeson >=2.0 && <2.3
    , yaml >=0.11 && <0.12
    , unordered-containers >=0.2 && <0.3
    , hashable >=1.3 && <1.5
    , deepseq >=1.4 && <1.6
  default-language: Haskell2010

executable lensdb-server
  main-is: Main.hs
  other-modules:
      Paths_lensdb
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , lensdb
    , bytestring >=0.10 && <0.13
    , stm >=2.5 && <2.6
    , time >=1.5 && <2
  if os(unix)
    build-depends: unix >=2.7 && <2.9
    cpp-options: -DUNIX
  default-language: Haskell2010

test-suite lensdb-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      LensDB.CoreSpec
      LensDB.StorageSpec
      Paths_lensdb
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , lensdb
    , hspec >=2.7 && <2.12
    , QuickCheck >=2.14 && <2.16
  default-language: Haskell2010

benchmark lensdb-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  build-depends:       base
                     , lensdb
                     , criterion
                     , deepseq
                     , bytestring
                     , random
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N